<resources>

    <string name="app_name">Food Ordering</string>
    <string name="google_api_key">AIzaSyBUWFfFpeMNmLOcDMgg8DwXLPVBhT6Avg0</string>

    <!-- ######### Login ######### -->
    <string name="title_activity_login">Prijava</string>
    <string name="action_register">Niste korisnik?\nRegistrirajte se</string>
    <string name="action_sign_in">Prijava</string>
    <string name="prompt_city">Odaberite grad</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Lozinka</string>

    <!-- ######### Register ######### -->
    <string name="title_activity_register">Registracija</string>

    <!-- ######### Settings ######### -->
    <string name="title_activity_settings">Postavke</string>
    <string name="title_settings_section_app">Postavke aplikacije</string>
    <string name="title_settings_section_data">Osobni podaci</string>
    <string name="title_settings_sync">Auto sinkronizacija</string>

    <!-- ######### Main Activity ######### -->
    <string name="title_activity_main"></string>

    <!-- ########## Fragment Restaurant ########## -->
    <string name="action_order">Naruči</string>

    <!-- ########## Fragment Orders ########## -->
    <string name="title_orders_restaurant_name">Restoran</string>
    <string name="title_orders_time">Vrijeme narudžbe</string>
    <string name="title_orders_total">Ukupna cijena</string>
    <string name="action_cancel_order">Otkaži narudžbu</string>

    <!-- ########## Fragment ConfirmOrder ########## -->
    <string name="title_order_date">Datum narudžbe:</string>
    <string name="title_order_time">Vrijeme dostave</string>
    <string name="title_order_total">Ukupna cijena:</string>
    <string name="title_order_address">Adresa dostave</string>
    <string name="title_order_alt_address">Alt. adresa</string>
    <string name="action_confirm_order">Potvrdi narudžbu</string>

    <!-- ######### Navigation drawer ######### -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_home">Početna</string>
    <string name="item_orders">Izvršene narudžbe</string>
    <string name="item_map">Mapa</string>
    <string name="item_settings">Postavke</string>
    <string name="item_logout">Odjava</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_text">Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef Abcdef</string>

</resources>
