<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeOption"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/item_home"/>
        <item
            android:id="@+id/ordersOption"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/item_orders"/>
        <item
            android:id="@+id/mapOption"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/item_map"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/settingsOption"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/item_settings"/>
            <item
                android:id="@+id/logoutOption"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/item_logout"/>
        </menu>
    </item>

</menu>
