<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_marginTop="5dp"
              android:layout_marginBottom="5dp">
    <TextView
        android:id="@+id/tvOrdersRestaurantTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:text="@string/title_orders_restaurant_name"/>
    <TextView
        android:id="@+id/tvOrdersRestaurant"
        android:layout_toRightOf="@id/tvOrdersRestaurantTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/tvOrdersTimeTitle"
        android:layout_below="@id/tvOrdersRestaurantTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:text="@string/title_orders_time"/>
    <TextView
        android:id="@+id/tvOrdersTime"
        android:layout_below="@id/tvOrdersRestaurant"
        android:layout_toRightOf="@id/tvOrdersTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/tvOrdersTotalTitle"
        android:layout_below="@id/tvOrdersTimeTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:text="@string/title_orders_total"/>
    <TextView
        android:id="@+id/tvOrdersTotal"
        android:layout_below="@id/tvOrdersTime"
        android:layout_toRightOf="@id/tvOrdersTotalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>
</RelativeLayout>